--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,12 @@
 			<version>2.1.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>1.8.10</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
