--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,18 @@
 			<version>1.8.10</version>
 		</dependency>
 
+		<dependency>
+			<groupId>us.codecraft</groupId>
+			<artifactId>webmagic-core</artifactId>
+			<version>0.7.3</version>
+		</dependency>
+
+		<dependency>
+			<groupId>us.codecraft</groupId>
+			<artifactId>webmagic-extension</artifactId>
+			<version>0.7.3</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
