--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,12 @@
 			<version>29.0-jre</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.tg</groupId>
+			<artifactId>supports-core</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+
     </dependencies>
 
 	<build>
